crates/plotnik-lib/tests/04-emit/linking/alternation_branch_errors.txt
Q = [
  (function_declaraton)
  (class_declaraton)
] @decl
==== diagnostics ====
error: `function_declaraton` is not a valid node type
 --> query.ptk:2:4
  |
2 |   (function_declaraton)
  |    ^^^^^^^^^^^^^^^^^^^
  |
help: did you mean `function_declaration`?
  |
2 |   (function_declaration)
  |                     +

error: `class_declaraton` is not a valid node type
 --> query.ptk:3:4
  |
3 |   (class_declaraton)
  |    ^^^^^^^^^^^^^^^^
  |
help: did you mean `class_declaration`?
  |
3 |   (class_declaration)
  |                  +
